# fastapi-todo

./: README  docker-compose.yaml  pyproject.toml
api/: db.py  migrate_db.py
api/cruds/: done.py  task.py
api/models/: task.py
api/routers/: done.py  task.py
api/schemas/: done.py  task.py
tests/: test_main.py
